# intro-code-agents

./: README.md
prompt-ver-api/: README.md  main.py  pyproject.toml
prompt-ver-api/.github/: copilot-instructions.md
prompt-ver-api/controllers/: routes.py
prompt-ver-api/messaging/: nats_publisher.py
prompt-ver-api/models/: prompt_models.py
prompt-ver-api/services/: prompt_service.py
prompt-ver-api/tests/: conftest.py
prompt-ver-api/tests/controllers/: test_routes.py
prompt-ver-api/tests/messaging/: test_nats_publisher.py
prompt-ver-api/tests/services/: test_prompt_service.py
prompt-ver-api/tests/utils/: test_error_handlers.py  test_exceptions.py  test_json_utils.py
prompt-ver-api/utils/: error_handlers.py  exceptions.py  json_utils.py  logger.py
prompt-ver-core/: CLAUDE.md  README.md  docker-compose.yml  main.py  prompts.db  pyproject.toml  smoke_test.sh
prompt-ver-core/src/app/: __init__.py  activate_version.py  add_version.py  compare_versions.py  create_prompt.py  dtos.py  exceptions.py  get_prompt_by_id.py  list_active_prompts.py  list_deleted_prompts.py  list_versions.py  recover_prompt.py  soft_delete_prompt.py  update_content.py
prompt-ver-core/src/domain/: __init__.py  diff.py  enums.py  events.py  exceptions.py  prompt.py  prompt_version.py  value_objects.py
prompt-ver-core/src/infra/: config.py  logging.py  (+1 more)
prompt-ver-front/: index.html  tailwind.config.js
prompt-ver-front/src/: App.tsx  index.css
slides/: AMBIENTE.md  CLAUDE_INSTALL.md  GITHUB_COPILOT.md  PROMPTS_API.md  PROMPTS_CORE.md  PROMPTS_FRONT.md  introducao.excalidraw
(+26 files in other folders)
